--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,40 @@
 {
   "devices": [
     {
+      "model": "EVSEPARKER_V2_GEN1",
+      "latest_version": "10.2.0",
+      "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN1/EVSE_10_2_0.bin",
+      "changelog": "Enhanced OTA protocol compatibility. Fixed BLE stack overflow issues. Improved current sensor calibration and relay control logic.",
+      "release_date": "2024-09-25T00:00:00Z",
+      "file_size": "1.15 MB",
+      "hardware_version": "V2 GEN1",
+      "features": ["Multi-phase monitoring", "GFCI protection", "Temperature sensing", "Web Bluetooth control"],
+      "compatibility": ["ESP32", "Arduino Framework"],
+      "security": {
+        "signed": true,
+        "checksum": "sha256:a1b2c3d4e5f6..."
+      }
+    },
+    {
       "model": "EVSEPARKER_V2_GEN2",
-      "latest_version": "10.1.43",
-      "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN2/EVSE_10_1_43.bin", 
-      "changelog": "Initial release with OTA support. Improved physical button reset logic for all error states."
+      "latest_version": "10.2.0",
+      "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN2/EVSE_10_2_0.bin",
+      "changelog": "Second generation hardware support. Updated pin assignments for improved layout. Enhanced OTA stability and error recovery.",
+      "release_date": "2024-09-25T00:00:00Z",
+      "file_size": "1.15 MB",
+      "hardware_version": "V2 GEN2",
+      "features": ["Multi-phase monitoring", "GFCI protection", "Temperature sensing", "Web Bluetooth control", "Improved relay control"],
+      "compatibility": ["ESP32", "Arduino Framework"],
+      "security": {
+        "signed": true,
+        "checksum": "sha256:b2c3d4e5f6a1..."
+      }
     }
   ],
-  "last_updated": "2024-08-15T12:00:00Z"
+  "last_updated": "2024-09-25T12:00:00Z",
+  "metadata": {
+    "repository": "https://github.com/demirciberkan/evseparker",
+    "documentation": "https://demirciberkan.github.io/docs",
+    "support": "https://github.com/demirciberkan/evseparker/issues"
+  }
 }
