--- a/manifest.json
+++ b/manifest.json
@@ -1,42 +1,22 @@
 {
   "hardware_models": {
-    "EVSEPARKER_V2_GEN1": {
-      "name": "EVSEPARKER V2 GEN1",
-      "description": "Original V2 hardware revision",
-      "firmware_versions": [
-        {
-          "version": "10.2.0",
-          "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN1/EVSE_10_2_0.bin",
-          "description": "Enhanced OTA protocol. Fixed BLE stack overflow. Improved sensor calibration.",
-          "release_date": "2024-09-25",
-          "file_size": "1.15 MB"
-        },
-        {
-          "version": "10.1.43",
-          "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN1/EVSE_10_1_43.bin",
-          "description": "Stable release with OTA support. Improved physical button reset logic.",
-          "release_date": "2024-09-01",
-          "file_size": "1.12 MB"
-        }
-      ]
-    },
     "EVSEPARKER_V2_GEN2": {
       "name": "EVSEPARKER V2 GEN2",
-      "description": "Second generation hardware with updated pin assignments",
+      "description": "Second generation V2 hardware with improved relay control",
       "firmware_versions": [
+        {
+          "version": "10.3.0",
+          "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN2/EVSE_10_3_0.bin",
+          "description": "Firmware version 10.3.0",
+          "release_date": "2025-09-26",
+          "file_size": "1.15 MB"
+        },
         {
           "version": "10.2.0",
           "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN2/EVSE_10_2_0.bin",
-          "description": "GEN2 hardware support. Updated pin assignments. Enhanced OTA stability.",
-          "release_date": "2024-09-25",
+          "description": "Enhanced OTA protocol. Fixed BLE connectivity issues.",
+          "release_date": "2025-09-26",
           "file_size": "1.15 MB"
-        },
-        {
-          "version": "10.1.43",
-          "url": "https://demirciberkan.github.io/firmware/EVSEPARKER_V2_GEN2/EVSE_10_1_43.bin",
-          "description": "Initial GEN2 support with standard features.",
-          "release_date": "2024-09-01",
-          "file_size": "1.12 MB"
         }
       ]
     }
@@ -50,5 +30,5 @@
       "expires": "2024-12-25"
     }
   },
-  "last_updated": "2024-09-25T12:00:00Z"
+  "last_updated": "2025-09-26T00:33:19.752732"
 }
